# rdk-audioserver

./: CONTRIBUTING.md  NOTICE
audioserver/: Makefile.am  configure.ac  readme
audioserver/build_scripts/audioserver/: rdk_build.sh  rdk_env.xml
audioserver/build_scripts/audioserver-headers/: rdk_build.sh  rdk_env.xml
audioserver/conf/: audioserver.service
audioserver/include/: audioserver-soc.h  audioserver.h  audsrv-conn.h  audsrv-logger.h  audsrv-protocol.h
audioserver/sample-apps/: Makefile.am  configure.ac
audioserver/sample-apps/effects/: aseffects.cpp
audioserver/sample-apps/monitor/: asmonitor.cpp
audioserver/sample-apps/player/: asplayer.cpp
audioserver/src/: audsrv-api.cpp  audsrv-conn.cpp  audsrv-logger.cpp  audsrv-main.cpp  audsrv-test.cpp
gstplugin/: COPYING  COPYING.LGPL  Makefile.am  configure.ac  gstaudsrvsink-socapi.h  gstaudsrvsink.c  gstaudsrvsink.h
